fix(gtk3.20: toolbar: titlebar): revert to hardcoded side padding instead of using $spacing

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -118,7 +118,7 @@
 
         border-radius: $roundness $roundness 0 0;
         color: $titlebar_fg_focused;
-        padding: 0 $spacing * 2;
+        padding: 0 6px;
         min-height: 42px;
 
         &:backdrop {
